test/test_units/test_kclvm/test_types/invalid_test_data/loop/loop_1.k
a = 1
b = all i in a {
    i
}
